<resources>
    <string name="app_name">Noise Meter</string>

    <!-- MAIN ACTIVITY STRINGS -->
    <string name="StartingTimeRunning"></string>
    <string name="DurationTimeRunning"></string>
    <string name="ButtonRunning">RESET</string>

    <string name="LMax_label">Maximum</string>
    <string name="LAeqTimeDisplay_label">LAeq</string>
    <string name="LMin_label">Minimum</string>
    <string name="LMax">0</string>
    <string name="LAeqTimeDisplay">0</string>
    <string name="LMin">0</string>
    <string name="LAeqRunning_label">LAeq(t)</string>
    <string name="LAeqRunning"></string>

    <string name="level">0</string>
    <string name="level_label"></string>
    <string name="level_label_dBA">dB(A)</string>

    <string name="StartingTimeLog"></string>
    <string name="DurationTimeLog"></string>
    <string name="StartingTimeLogText">You are not saving data</string>
    <string name="DurationTimeLogText">Sampling:</string>

    <!-- ACTION BAR STRINGS -->
    <string name="action_info">About</string>
    <string name="action_log_files">Log files</string>
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>

    <!-- SETTINGS ACTIVITY STRINGS -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>

    <!-- LOG FILES LIST ACTIVITY STRINGS -->
    <string name="title_activity_log_files_list">Log files list</string>

    <!-- LOG FILES READ ACTIVITY STRINGS -->
    <string name="title_activity_log_files_read">Log file read</string>
    <string name="ButtonLogFileTop">Top</string>
    <string name="ButtonLogFileBottom">Bottom</string>
    <string name="ButtonLogFileLeft">Left</string>
    <string name="ButtonLogFileRight">Right</string>

    <!-- INFO ACTIVITY STRINGS -->
    <string name="title_activity_info">About</string>
    <string name="Openoise">OpeNoise</string>
    <string name="OpenoiseText">OpeNoise provides real-time A-weighted sound pressure level measurement.\nFunctions:\n - minimum and maximum level\n - third octave and FFT analysis\n - log file storage\n - sampling time setting\n - gain setting
</string>


</resources>
